--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/angular/angular.js"></script>
 <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="node_modules/angular-cookies/angular-cookies.min.js"></script>
 <script src="app/services.js"></script>
 <script src="app/controllers.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
